# FaceValue

./: .env.example  .gitignore  DEMO_SCRIPT.md  README.md  next.config.ts  package-lock.json  package.json
circuits/: resale.circom
contracts/facevalue/: .gitignore  Cargo.toml  Makefile  README.md
contracts/facevalue/src/: bn254_real_fixture.rs  lib.rs  test.rs
docs/superpowers/plans/: 2026-06-24-onchain-wallet-integration.md
docs/superpowers/specs/: 2026-06-24-onchain-wallet-integration-design.md
public/circuits/: resale.wasm  resale_final.zkey  verification_key.json
scripts/soroban/: deploy.mjs
scripts/zk/: build.mjs  finalize.mjs  groth16-bytes.mjs  make-contract-fixture.mjs  make-fixtures.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/prove/: route.ts
src/app/api/verify/: route.ts
src/app/audit/: page.tsx
src/app/door/: page.tsx
src/app/resale/: page.tsx
src/app/wallet/: page.tsx
src/components/: connect-wallet.tsx  top-nav.tsx
src/components/ui/: badge.tsx  button.tsx  cap-meter.tsx  hash-mono.tsx  perforated-stub.tsx  redaction-field.tsx  tx-stamp.tsx
src/lib/: mock-data.ts
src/lib/stellar/: config.test.ts  config.ts  errors.test.ts  errors.ts  submit.ts  wallet.tsx
src/lib/zk/: circomlibjs.d.ts  fixtures.json  groth16-serialize.test.ts  groth16-serialize.ts  merkle.ts  prover.ts  snarkjs.d.ts  types.ts
